Fix project setup
Move files to correct path and add them to project file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/Example/editorTest.xcodeproj/xcuserdata/joe.xcuserdatad
-/Example/editorTest.xcworkspace/xcuserdata/joe.xcuserdatad
-/Example/Pods/Pods.xcodeproj/xcuserdata/joe.xcuserdatad
-/Photo Editor/.DS_Store
-/Photo Editor/Photo Editor.xcodeproj/project.xcworkspace/xcuserdata/joe.xcuserdatad
+/Example/editorTest.xcodeproj/xcuserdata
+/Example/editorTest.xcworkspace/xcuserdata
+/Example/Pods/Pods.xcodeproj/xcuserdata
+/Photo Editor/Photo Editor.xcodeproj/project.xcworkspace/xcuserdata/
+.DS_Store
